force-app/main/default/objects/CEPSkipValidationRules__c/CEPSkipValidationRules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to skip validation rules</description>
    <label>CEP Skip Validation Rules</label>
</CustomObject>