force-app/main/default/objects/CEPSkipValidationRules__c/fields/OpportunityContactRole__c.field-meta.xml
<CustomField>
    <fullName>OpportunityContactRole__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Contact Role</label>
    <type>Checkbox</type>
</CustomField>